--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "An application to model an address book in Node",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "export NODE_ENV=test && jasmine"
   },
   "author": "Damian Rivas",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.1.0"
+  },
+  "devDependencies": {
+    "jasmine": "^3.2.0"
   }
 }
