--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Damian Rivas",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.1.0"
+    "inquirer": "^6.1.0",
+    "pg": "^7.4.3",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.38.0"
   },
   "devDependencies": {
     "jasmine": "^3.2.0"
