--- a/db/config/config.json
+++ b/db/config/config.json
@@ -5,7 +5,8 @@
     "database": "address-bloc-dev",
     "host": "127.0.0.1",
     "dialect": "postgres",
-    "logging": true
+    "logging": false,
+    "operatorsAliases": false
   },
   "test": {
     "username": "postgres",
@@ -13,6 +14,7 @@
     "database": "address-bloc-test",
     "host": "127.0.0.1",
     "dialect": "postgres",
-    "logging": false
+    "logging": false,
+    "operatorsAliases": false
   }
 }
